spacing fix

--- a/qr/assets/css/main.css
+++ b/qr/assets/css/main.css
@@ -45,12 +45,12 @@
 
 
 .content {
-    position: fixed;
-    left: 0;
-    right: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%; /* adjust as needed */
     z-index: 9999;
-    margin-left: 20px;
-    margin-right: 20px;
   }
 .top{
     display: flex;
@@ -103,10 +103,10 @@
 .bi{
   margin-left: 50px;
   margin-right: 50px;
-  padding: 10px;
+  padding: 8px;
   color: #fff;
   background-color: rgba(19, 51, 35, 0.8);
-  font-size: 45px;
+  font-size: 40px;
   cursor: pointer;
   border-radius: 10px;
   transition: all 0.3s ease 0s;
@@ -139,7 +139,7 @@
     cursor: pointer;
     outline: none;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
 }
 
 
